<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/medicine_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="220dp"
        android:text="@string/insert_medicine_s_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000">
    </TextView>

    <EditText
        android:id="@+id/medicine_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="24dp"
        android:hint="@string/name_of_medicine"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"></EditText>

    <TextView
        android:id="@+id/medicine_hour_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_time_at_which_you_want_to_take_your_medicine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132"
        android:textColor="#000000"></TextView>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="344dp"
        android:layout_height="356dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicine_hour_text">
    </TimePicker>

    <TextView
        android:id="@+id/choose_medicine_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_type_of_medicine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_picker"
        android:textColor="#000000"></TextView>

    <RadioGroup
        android:id="@+id/medicine_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_medicine_type_text">

        <RadioButton
            android:id="@+id/pills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pills"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="520dp"></RadioButton>

        <RadioButton
            android:id="@+id/syrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/syrup"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="569dp"></RadioButton>

        <RadioButton
            android:id="@+id/injection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/injection"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="604dp"></RadioButton>

        <RadioButton
            android:checked="true"
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="604dp"></RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>