<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/add_new_medication_button"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:layout_marginStart="10dp"
        android:drawableTop="@drawable/ic_create_black"
        android:drawablePadding="-10dp"
        android:text="@string/add_new_medication_button"
        android:textColor="#141414"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"></Button>

    <Button
        android:id="@+id/show_medications_button"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableTop="@drawable/ic_sort_black"
        android:drawablePadding="-10dp"
        android:text="@string/show_medications_button"
        android:textColor="#141414"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_new_medication_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"></Button>

    <Button
        android:id="@+id/show_kit_button"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:layout_marginStart="10dp"
        android:drawableTop="@drawable/local_hospital_black"
        android:drawablePadding="-10dp"
        android:text="@string/show_kit_button"
        android:textColor="#141414"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"></Button>

    <Button
        android:id="@+id/show_more_button"
        android:layout_width="195dp"
        android:layout_height="195dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableTop="@drawable/error_black"
        android:drawablePadding="-10dp"
        android:text="@string/show_more_button"
        android:textColor="#141414"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/show_kit_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>